# tiny-tools

./: .gitignore  CMakeLists.txt  hello-arm.S  markers.h  sh-coeff.c
.cache/clangd/index/: tiny.c.D965200830E8C6ED.idx  tiny.cpp.3816188FA2150077.idx
TextureGenerator/: TexGenerator.cpp  generator
splashScreen/src/: main.m
